Update Bisq build and runtime to Java 17